# TensorC

./: CMakeLists.txt
Demo3/: main.c  test1  test_ComplexTensor  test_ComplexTensor.c  test_EWAdd  test_EWAdd.c  test_EWExp10  test_EWExp10.c  test_EWMul  test_EWMul.c  test_Scalar  test_Scalar.c  test_cast  test_cast.c  test_get  test_get.c  test_matmul  test_matmul.c  test_norm.c  test_ravel  test_ravel.c  test_ttm  test_ttm.c  trst_matmul.c
include/: iterator.h  scalartype.h  shape.h  tensor.h
lib/: CMakeLists.txt  New Text Document.txt  aggregation.c  elementwiseOp.c  iterator.c  matrixOp.c  reshape.c  scalartype.c  shape.c  slice.c  svdcmp.c  tensor.c  tensorOp.c
